--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "lucide-react": "^0.460.0",
-    "hls.js": "^1.5.15"
+    "hls.js": "^1.5.15",
+    "@google/genai": "^0.2.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
